[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/scripts/player/player.gd" type="Script" id=1]
[ext_resource path="res://assets/art/Player/atlas/playerAnim.tres" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 3.52409, 6.78017 )

[sub_resource type="Animation" id=2]

resource_name = "Run"
length = 1.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 30, 31, 32, 33, 34, 35, 36, 37, 38, 39 ]
}

[sub_resource type="Animation" id=3]

resource_name = "Run"
length = 1.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("../Body:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 0 ), Vector2( 0, -1 ), Vector2( 0, -2 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Head:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 0 ), Vector2( 0, -1 ), Vector2( 0, -2 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=4]

resource_name = "AttackDown"
length = 0.3
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 50, 51, 52 ]
}

[sub_resource type="Animation" id=5]

resource_name = "AttackUp"
length = 0.3
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 42, 43, 44 ]
}

[sub_resource type="Animation" id=6]

resource_name = "RunDown"
length = 1.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 40, 41, 40 ]
}

[sub_resource type="Animation" id=7]

resource_name = "RunUp"
length = 1.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 48, 49, 48 ]
}

[node name="Player" type="KinematicBody2D" index="0"]

input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Pickable", "Transform", "collision" ]
__meta__ = {
"_edit_group_": true
}
speed = 100
deadzone = Vector2( 0.4, 0.4 )

[node name="Body" type="Sprite" parent="." index="0"]

z_index = 2
texture = ExtResource( 2 )
vframes = 12
hframes = 8
frame = 53
_sections_unfolded = [ "Animation", "Offset", "Transform", "Z Index" ]

[node name="Legs" type="Sprite" parent="." index="1"]

z_index = 1
texture = ExtResource( 2 )
vframes = 12
hframes = 8
frame = 39
_sections_unfolded = [ "Animation", "Offset", "Transform", "Z Index" ]

[node name="Head" type="Sprite" parent="." index="2"]

z_index = 3
texture = ExtResource( 2 )
vframes = 12
hframes = 8
frame = 4
_sections_unfolded = [ "Animation", "Offset", "Z Index" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="3"]

position = Vector2( 0.174828, 1.22716 )
scale = Vector2( 1, 0.892676 )
shape = SubResource( 1 )

[node name="LegAnimationPlayer" type="AnimationPlayer" parent="." index="4"]

root_node = NodePath("../Legs")
autoplay = "Run"
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/Run = SubResource( 2 )
blend_times = [  ]
_sections_unfolded = [ "Playback Options" ]

[node name="BodyAnimationPlayer" type="AnimationPlayer" parent="." index="5"]

root_node = NodePath("../Legs")
autoplay = "Run"
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/Run = SubResource( 3 )
blend_times = [  ]
_sections_unfolded = [ "Playback Options" ]

[node name="MeleeAnimationPlayer" type="AnimationPlayer" parent="." index="6"]

root_node = NodePath("..")
autoplay = "RunDown"
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/AttackDown = SubResource( 4 )
anims/AttackUp = SubResource( 5 )
anims/RunDown = SubResource( 6 )
anims/RunUp = SubResource( 7 )
blend_times = [  ]

[connection signal="animation_finished" from="MeleeAnimationPlayer" to="." method="_on_MeleeAnimationPlayer_animation_finished"]


